package tasks.task_1.stub_code;

public enum OrderStatus {
    PENDING,
    COMPLETED,
    SHIPPED
}
