package tasks.task_1.stub_code;

public enum PaymentStatus {
    PENDING,
    COMPLETED,
    FAILED
}
